feat: delete integration